fixing overflow on the nav ul

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@
   display: none;
   flex-direction: column;
   background-color: #3c3a39;
-  width: 375px;
+  width: 100%;
   height: 570px;
   z-index: 100;
   position: absolute;
